# resume-builder-drf

./: .flake8  .gitignore  docker-compose.yaml  pyproject.toml
src/: manage.py  schema.yml
src/apps/authentication/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
src/apps/authentication/migrations/: 0001_initial.py  0002_delete_emailconfirmationtokenmodel.py
src/apps/authentication/services/: password_services.py  services.py
src/apps/authentication/tasks/: emails.py
src/apps/resume/: admin.py  models.py  urls.py
src/apps/resume/migrations/: 0001_initial.py  0002_rename_update_at_resumetemplatemodel_updated_at.py
src/apps/resume/serializers/: resume_section_serializer.py  resume_serializer.py  resume_template_serializer.py
src/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/authentication/: serializers.py  services.py  urls.py  views.py
src/config/: settings.py  urls.py
src/config/settings/: __init__.py  celery.py  database.py  jwt.py  redis.py  settings.py
src/libs/: throttling.py
src/libs/jwt_auth/: authentication.py  token.py
src/libs/middleware/: csrf_permission.py  jwt_authentication.py
src/tests/: conftest.py
src/tests/auth/: test_auth_services.py
src/tests/fixtures/: resume.py  users.py
src/tests/resume/: test_resume_sections_services.py  test_resume_services.py  test_resume_template_services.py  test_services.py
src/users/: models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/utils/constants/: cookies.py  drf_spectacular.py  headers.py
(+8 files in other folders)
